CLOSED FIXED 37637
Repaint of fixed, transformed element is broken
https://bugs.webkit.org/show_bug.cgi?id=37637
Summary Repaint of fixed, transformed element is broken
Simon Fraser (smfr)
Reported 2010-04-14 21:27:32 PDT
RenderBox::computeRectForRepaint() is broken for elements that have both fixed position and a transform.
Attachments
Patch (17.52 KB, patch)
2010-04-14 21:36 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2010-04-14 21:36:39 PDT
Simon Fraser (smfr)
Comment 2 2010-04-14 21:48:33 PDT
Simon Hausmann
Comment 3 2010-04-26 03:27:51 PDT
<cherry-pick-for-backport: r57633>
Simon Hausmann
Comment 4 2010-04-26 03:29:13 PDT
Revision r57633 cherry-picked into qtwebkit-2.0 with commit 829895d4e2c6557956b6db5c6caf006a57ec3f43
Note You need to log in before you can comment on or make changes to this bug.