2010-04-14  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Repaint of fixed, transformed element is broken
        https://bugs.webkit.org/show_bug.cgi?id=37637

        RenderBox::computeRectForRepaint() failed to set the 'fixed' flag correctly
        for elements that had both fixed position and a transform. If the element has
        a transform, 'fixed' should only remain true if the element itself is fixed
        position.

        Also cache style()->position() in a local variable for performance.

        Test: fast/repaint/fixed-tranformed.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::computeRectForRepaint):

Canonical link: https://commits.webkit.org/48920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57633 268f45cc-cd09-0410-ab3c-d52691b4dbfc